# bazel_zlib_foreign

./: BUILD.bazel  MODULE.bazel  README.md  lib.BUILD.bazel
.bcr/: metadata.template.json
.github/workflows/: tag-and-release.yml  test.yml
integration/: BUILD.bazel  MODULE.bazel
