load("@rules_cc//cc:defs.bzl", "cc_test")
load("@rules_foreign_cc//foreign_cc:defs.bzl", "configure_make")

package(default_visibility = ["//visibility:public"])

configure_make(
    name = "lib",
    lib_source = "@src//:all_srcs",
    configure_options = [
        "--prefix=$$INSTALLDIR$$",
    ],
    args = [
        "V=1 install",
    ],
    env = {
    },
    out_shared_libs = [
        "libz.so",
        "libz.so.1",
        "libz.so.1.3.1",
    ],
    out_static_libs = [ "libz.a" ],
)

cc_test(
    name = "test",
    srcs = [ "test.cc" ],
    deps = [
        ":lib",
    ],
    size = "small",
)
