load("@rules_cc//cc:defs.bzl", "cc_test")
load("@rules_foreign_cc//foreign_cc:defs.bzl", "configure_make")

package(default_visibility = ["//visibility:public"])

alias(
    name = "lib",
    actual = ":build_target",
)

configure_make(
    name = "build_target",
    lib_source = "@src//:all_srcs",
    # Not sure why the compiler does not want to build shared libraries. Fine.
    #out_shared_libs = [
        #"libz.so",
        #"libz.so.1",
        #"libz.so.1.3.1",
    #],
    out_static_libs = [ "libz.a" ],
)

cc_test(
    name = "test",
    srcs = [ "test.cc" ],
    deps = [
        ":lib",
    ],
    size = "small",
)
