module(
    name = "integration",
    version = "0.0.0",
)

bazel_dep(name = "rules_foreign_cc", version = "0.15.1")
bazel_dep(name = "rules_cc", version = "0.2.8")


bazel_dep(name = "hermetic_cc_toolchain", version = "3.1.0")
toolchains = use_extension("@hermetic_cc_toolchain//toolchain:ext.bzl", "toolchains")
use_repo(toolchains, "zig_sdk")
register_toolchains(
    "@zig_sdk//toolchain/...",
    "@zig_sdk//libc_aware/toolchain/...",
)


bazel_dep(name = "zlib_foreign", version = "0.0.0", repo_name = "lib")
local_path_override(
    module_name = "zlib_foreign",
    path = "../",
)
